# axiom

./: README.md
backend/: .env.example  README.md  package-lock.json  package.json
backend/src/: index.js
backend/src/config/: database.js
backend/src/controllers/: agentController.js  aiController.js  chatController.js  dashboardController.js  deploymentController.js  marketplaceController.js  walletController.js
backend/src/models/: Agent.js
backend/src/routes/: agentRoutes.js  aiRoutes.js  dashboardRoutes.js  deploymentRoutes.js  marketplaceRoutes.js  walletRoutes.js
backend/src/services/: injectiveService.js
contracts/: README.md
contracts/agent-registry/: Cargo.toml
contracts/agent-registry/src/: lib.rs
contracts/marketplace/: Cargo.toml
contracts/marketplace/src/: lib.rs
docs/: README.md  iagent-setup.md
docs/api-reference/: agent-api.md  authentication.md  deployment-api.md  marketplace-api.md
docs/developer-guide/: api-reference.md  architecture.md  backend.md  frontend.md  smart-contract-integration.md
docs/user-guide/: creating-an-agent.md  deploying-an-agent.md  getting-started.md  monitoring-agents.md  optimizing-agents.md  using-the-marketplace.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  vite-env.d.ts
frontend/src/components/: DarkModeToggle.tsx  Layout.tsx  Navbar.tsx  Sidebar.tsx  WalletConnect.tsx
frontend/src/context/: WalletContext.tsx
frontend/src/pages/: AgentDetails.tsx  ApiReferencePage.tsx  Chat.tsx  CreateAgent.tsx  DashboardPage.tsx  DeploymentPage.tsx  DesignStudioPage.tsx  DeveloperGuidePage.tsx  HomePage.tsx  Marketplace.tsx  MarketplacePage.tsx  MyAgents.tsx  NotFoundPage.tsx
frontend/src/services/: api.ts
frontend/src/store/: walletStore.ts
frontend/src/types/: keplr.d.ts
