[package]
name = "axiom-agent-registry"
version = "0.1.0"
authors = ["Axiom Team"]
edition = "2021"
description = "A registry for AI agents on the Injective blockchain"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cosmwasm-std = { version = "1.1.0" }
cosmwasm-storage = { version = "1.1.0" }
cw-storage-plus = "0.16.0"
cw2 = "0.16.0"
schemars = "0.8.10"
serde = { version = "1.0.145", default-features = false, features = ["derive"] }
thiserror = "1.0.31"
wasm = "0.0.0"

[dev-dependencies]
cosmwasm-schema = "1.1.0"
cw-multi-test = "0.16.0" 
