[package]
name = "axiom-agent-registry"
version = "0.1.0"
authors = ["Axiom Team"]
edition = "2021"
description = "A registry for AI agents on the Injective blockchain"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cosmwasm-std = { version = "1.1.0" }
cosmwasm-storage = { version = "1.1.0" }
cw-storage-plus = "0.16.0"
cw2 = "0.16.0"
schemars = "0.8.10"
serde = { version = "1.0.145", default-features = false, features = ["derive"] }
thiserror = "1.0.31"
# Remove the wasm dependency as it's not needed and causing issues
# wasm = "0.0.0"
# Add Injective specific dependencies
injective-cosmwasm = "0.2.2"
injective-std = "0.1.4"
injective-math = "0.1.12"

[dev-dependencies]
cosmwasm-schema = "1.1.0"
cw-multi-test = "0.16.0" 
